@@ -955,3 +955,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
          (Sergio).
 20131215 rzx.c: fix snapshot insertion in rzx recordings (Sergio).
+20140113 libspectrum.h.in,rzx.c: allow to finalise rzx recordings (part of bug
+         #305) (Sergio).
